Исправления исходя рекомендий по ревью